fix: add z-index for pseudo element

--- a/src/components/LineCurrent/lineCurrent.css
+++ b/src/components/LineCurrent/lineCurrent.css
@@ -40,6 +40,7 @@
   content: "";
 
   position: absolute;
+  z-index: 1;
   top: 0;
   right: -38px;
 
